fix: no borders spacing added in detail page

--- a/rest-api-countries/src/assets/css/base.css
+++ b/rest-api-countries/src/assets/css/base.css
@@ -444,6 +444,7 @@ body.dark-theme .top-bar__search-icon {
 
 .flag-detail__border strong {
   flex-shrink: 0;
+  margin-right: 10px;
 }
 
 .flag-detail__border-item {
